code/parse.output
Grammar

    0 $accept: start $end

    1 start: file_input
    2      | encoding_decl
    3      | single_input

    4 single_input: NEWLINE
    5             | stmt_stmt

    6 file_input: star_NEWLINE_stmt ENDMARKER

    7 pick_NEWLINE_stmt: NEWLINE
    8                  | stmt_stmt

    9 star_NEWLINE_stmt: pick_NEWLINE_stmt star_NEWLINE_stmt
   10                  | %empty

   11 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT dotted_name NEWLINE

   13 opt_arglist: arglist
   14            | %empty

   15 decorators: decorator decorators
   16           | decorator

   17 decorated: decorators classdef
   18          | decorators funcdef

   19 funcdef: DEF NAME parameters COLON suite

   20 parameters: LPAR varargslist RPAR
   21           | LPAR RPAR

   22 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   23            | fpdef opt_EQUAL_test star_COMMA_fpdef

   24 opt_EQUAL_test: EQUAL test
   25               | %empty

   26 star_fpdef_COMMA: fpdef opt_EQUAL_test COMMA star_fpdef_COMMA
   27                 | %empty

   28 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   29                    | %empty

   30 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   31                     | DOUBLESTAR NAME

   32 fpdef: NAME
   33      | LPAR fplist RPAR

   34 fplist: fpdef star_fpdef_notest

   35 stmt_stmt: stmt

   36 stmt: simple_stmt
   37     | compound_stmt

   38 simple_stmt: small_stmt small_stmt_STAR_OR_SEMI NEWLINE

   39 small_stmt: expr_stmt
   40           | print_stmt
   41           | del_stmt
   42           | pass_stmt
   43           | flow_stmt
   44           | import_stmt
   45           | global_stmt
   46           | exec_stmt
   47           | assert_stmt

   48 expr_stmt: testlist augassign pick_yield_expr_testlist
   49          | testlist star_EQUAL

   50 pick_yield_expr_testlist: yield_expr
   51                         | testlist

   52 star_EQUAL: EQUAL pick_yield_expr_testlist star_EQUAL
   53           | %empty

   54 augassign: PLUSEQUAL
   55          | MINEQUAL
   56          | STAREQUAL
   57          | SLASHEQUAL
   58          | PERCENTEQUAL
   59          | AMPEREQUAL
   60          | VBAREQUAL
   61          | CIRCUMFLEXEQUAL
   62          | LEFTSHIFTEQUAL
   63          | RIGHTSHIFTEQUAL
   64          | DOUBLESTAREQUAL
   65          | DOUBLESLASHEQUAL

   66 print_stmt: PRINT opt_test
   67           | PRINT RIGHTSHIFT test opt_test_2

   68 opt_test: test star_COMMA_test
   69         | %empty

   70 opt_test_2: plus_COMMA_test
   71           | %empty

   72 del_stmt: DEL exprlist

   73 pass_stmt: PASS

   74 flow_stmt: break_stmt
   75          | continue_stmt
   76          | return_stmt
   77          | raise_stmt
   78          | yield_stmt

   79 break_stmt: BREAK

   80 continue_stmt: CONTINUE

   81 return_stmt: RETURN testlist
   82            | RETURN

   83 yield_stmt: yield_expr

   84 raise_stmt: RAISE test opt_test_3
   85           | RAISE

   86 opt_COMMA_test: COMMA test
   87               | %empty

   88 opt_test_3: COMMA test opt_COMMA_test
   89           | %empty

   90 import_stmt: import_name
   91            | import_from

   92 import_name: IMPORT dotted_as_names

   93 import_from: FROM star_DOT dotted_name IMPORT pick_STAR_import
   94            | FROM plus_DOT IMPORT pick_STAR_import

   95 star_DOT: DOT star_DOT
   96         | %empty

   97 plus_DOT: DOT plus_DOT
   98         | DOT

   99 pick_STAR_import: STAR
  100                 | LPAR import_as_names RPAR
  101                 | import_as_names

  102 import_as_name: NAME AS NAME
  103               | NAME

  104 dotted_as_name: dotted_name AS NAME
  105               | dotted_name

  106 import_as_names: import_as_name star_COMMA_import_as_name

  107 dotted_as_names: dotted_as_name
  108                | dotted_as_names COMMA dotted_as_name

  109 dotted_name: NAME
  110            | dotted_name DOT NAME

  111 global_stmt: global_stmt COMMA NAME
  112            | GLOBAL NAME

  113 exec_stmt: EXEC expr IN test opt_COMMA_test
  114          | EXEC expr

  115 assert_stmt: ASSERT test COMMA test
  116            | ASSERT test

  117 compound_stmt: if_stmt
  118              | while_stmt
  119              | for_stmt
  120              | try_stmt
  121              | with_stmt
  122              | funcdef
  123              | classdef
  124              | decorated

  125 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  126        | IF test COLON suite star_ELIF

  127 star_ELIF: ELIF test COLON suite star_ELIF
  128          | %empty

  129 while_stmt: WHILE test COLON suite ELSE COLON suite
  130           | WHILE test COLON suite

  131 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  132         | FOR exprlist IN testlist COLON suite

  133 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  134         | TRY COLON suite FINALLY COLON suite

  135 plus_except: except_clause COLON suite plus_except
  136            | except_clause COLON suite

  137 opt_ELSE: ELSE COLON suite
  138         | %empty

  139 opt_FINALLY: FINALLY COLON suite
  140            | %empty

  141 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  142 star_COMMA_with_item: COMMA with_item star_COMMA_with_item
  143                     | %empty

  144 with_item: test AS expr
  145          | test

  146 except_clause: EXCEPT test opt_AS_COMMA
  147              | EXCEPT

  148 pick_AS_COMMA: AS
  149              | COMMA

  150 opt_AS_COMMA: pick_AS_COMMA test
  151             | %empty

  152 suite: simple_stmt
  153      | NEWLINE INDENT plus_stmt DEDENT

  154 plus_stmt: stmt plus_stmt
  155          | stmt

  156 testlist_safe: old_test plus_COMMA_old_test
  157              | old_test

  158 old_test: or_test
  159         | old_lambdef

  160 old_lambdef: LAMBDA varargslist COLON old_test
  161            | LAMBDA COLON old_test

  162 test: or_test opt_IF_ELSE
  163     | lambdef

  164 opt_IF_ELSE: IF or_test ELSE test
  165            | %empty

  166 or_test: and_test
  167        | or_test OR and_test

  168 and_test: not_test
  169         | and_test AND not_test

  170 not_test: NOT not_test
  171         | comparison

  172 comparison: expr
  173           | comparison comp_op expr

  174 comp_op: LESS
  175        | GREATER
  176        | EQEQUAL
  177        | GREATEREQUAL
  178        | LESSEQUAL
  179        | GRLT
  180        | NOTEQUAL
  181        | IN
  182        | NOT IN
  183        | IS
  184        | IS NOT

  185 expr: xor_expr
  186     | expr BAR xor_expr

  187 xor_expr: and_expr
  188         | xor_expr CIRCUMFLEX and_expr

  189 and_expr: shift_expr
  190         | and_expr AMPERSAND shift_expr

  191 shift_expr: arith_expr
  192           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  193 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  194                          | RIGHTSHIFT

  195 arith_expr: term
  196           | arith_expr pick_PLUS_MINUS term

  197 pick_PLUS_MINUS: PLUS
  198                | MINUS

  199 term: factor
  200     | term pick_multop factor

  201 pick_multop: STAR
  202            | SLASH
  203            | PERCENT
  204            | DOUBLESLASH

  205 factor: pick_unop factor
  206       | power

  207 pick_unop: PLUS
  208          | MINUS
  209          | TILDE

  210 power: atom star_trailer DOUBLESTAR factor
  211      | atom star_trailer

  212 star_trailer: trailer star_trailer
  213             | %empty

  214 atom: LPAR opt_yield_test RPAR
  215     | LSQB opt_listmaker RSQB
  216     | LBRACE opt_dictorsetmaker RBRACE
  217     | BACKQUOTE testlist1 BACKQUOTE
  218     | NAME
  219     | NUMBER
  220     | plus_STRING

  221 pick_yield_expr_testlist_comp: yield_expr
  222                              | testlist_comp

  223 opt_yield_test: pick_yield_expr_testlist_comp
  224               | %empty

  225 opt_listmaker: listmaker
  226              | %empty

  227 opt_dictorsetmaker: dictorsetmaker
  228                   | %empty

  229 plus_STRING: STRING plus_STRING
  230            | STRING

  231 listmaker: test list_for
  232          | test star_COMMA_test

  233 testlist_comp: test comp_for
  234              | test star_COMMA_test

  235 lambdef: LAMBDA varargslist COLON test
  236        | LAMBDA COLON test

  237 trailer: LPAR opt_arglist RPAR
  238        | LSQB subscriptlist RSQB
  239        | DOT NAME

  240 subscriptlist: subscript star_COMMA_subscript

  241 subscript: DOT DOT DOT
  242          | test
  243          | opt_test_only COLON opt_test_only opt_sliceop

  244 opt_test_only: test
  245              | %empty

  246 opt_sliceop: sliceop
  247            | %empty

  248 sliceop: COLON test
  249        | COLON

  250 exprlist: expr star_COMMA_expr

  251 testlist: test star_COMMA_test

  252 dictorsetmaker: test COLON test pick_comp_for
  253               | test pick_for_test

  254 pick_comp_for: comp_for
  255              | star_test_COLON_test

  256 pick_for_test: comp_for
  257              | star_COMMA_test

  258 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  259         | CLASS NAME COLON suite

  260 opt_testlist: testlist
  261             | %empty

  262 arglist: argument COMMA arglist
  263        | argument COMMA
  264        | argument
  265        | listarg COMMA arglist_postlist
  266        | listarg
  267        | dictarg

  268 argument: test opt_comp_for
  269         | test EQUAL test

  270 opt_comp_for: comp_for
  271             | %empty

  272 list_iter: list_for
  273          | list_if

  274 list_for: FOR exprlist IN testlist_safe list_iter
  275         | FOR exprlist IN testlist_safe

  276 list_if: IF old_test list_iter
  277        | IF old_test

  278 comp_iter: comp_for
  279          | comp_if

  280 comp_for: FOR exprlist IN or_test comp_iter
  281         | FOR exprlist IN or_test

  282 comp_if: IF old_test comp_iter
  283        | IF old_test

  284 testlist1: test
  285          | testlist1 COMMA test

  286 encoding_decl: NAME

  287 yield_expr: YIELD testlist
  288           | YIELD

  289 star_fpdef_notest: COMMA fpdef star_fpdef_notest
  290                  | COMMA
  291                  | %empty

  292 star_COMMA_expr: COMMA expr star_COMMA_expr
  293                | COMMA
  294                | %empty

  295 star_COMMA_fpdef: COMMA fpdef opt_EQUAL_test star_COMMA_fpdef
  296                 | COMMA
  297                 | %empty

  298 star_COMMA_test: COMMA test star_COMMA_test
  299                | COMMA
  300                | %empty

  301 star_test_COLON_test: COMMA test COLON test star_test_COLON_test
  302                     | COMMA
  303                     | %empty

  304 star_COMMA_subscript: COMMA subscript star_COMMA_subscript
  305                     | COMMA
  306                     | %empty

  307 star_COMMA_import_as_name: COMMA import_as_name star_COMMA_import_as_name
  308                          | COMMA
  309                          | %empty

  310 plus_COMMA_test: COMMA test plus_COMMA_test
  311                | COMMA test COMMA
  312                | COMMA test

  313 plus_COMMA_old_test: COMMA old_test plus_COMMA_old_test
  314                    | COMMA old_test COMMA
  315                    | COMMA old_test

  316 dictarg: DOUBLESTAR test

  317 listarg: STAR test

  318 arglist_postlist: argument COMMA arglist_postlist
  319                 | dictarg
  320                 | argument

  321 small_stmt_STAR_OR_SEMI: SEMI small_stmt small_stmt_STAR_OR_SEMI
  322                        | SEMI
  323                        | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 59
AMPERSAND (259) 190
AND (260) 169
AS (261) 102 104 144 148
ASSERT (262) 115 116
AT (263) 11 12
BACKQUOTE (264) 217
BAR (265) 186
BREAK (266) 79
CIRCUMFLEX (267) 188
CIRCUMFLEXEQUAL (268) 61
CLASS (269) 258 259
COLON (270) 19 125 126 127 129 130 131 132 133 134 135 136 137 139
    141 160 161 235 236 243 248 249 252 258 259 301
COMMA (271) 26 28 86 88 108 111 115 142 149 262 263 265 285 289 290
    292 293 295 296 298 299 301 302 304 305 307 308 310 311 312 313
    314 315 318
CONTINUE (272) 80
DEDENT (273) 153
DEF (274) 19
DEL (275) 72
DOT (276) 95 97 98 110 239 241
DOUBLESLASH (277) 204
DOUBLESLASHEQUAL (278) 65
DOUBLESTAR (279) 28 31 210 316
DOUBLESTAREQUAL (280) 64
ELIF (281) 127
ELSE (282) 125 129 131 137 164
ENDMARKER (283) 6
EQEQUAL (284) 176
EQUAL (285) 24 52 269
EXCEPT (286) 146 147
EXEC (287) 113 114
FINALLY (288) 134 139
FOR (289) 131 132 274 275 280 281
FROM (290) 93 94
GLOBAL (291) 112
GREATER (292) 175
GREATEREQUAL (293) 177
GRLT (294) 179
IF (295) 125 126 164 276 277 282 283
IMPORT (296) 92 93 94
IN (297) 113 131 132 181 182 274 275 280 281
INDENT (298) 153
IS (299) 183 184
LAMBDA (300) 160 161 235 236
LBRACE (301) 216
LEFTSHIFT (302) 193
LEFTSHIFTEQUAL (303) 62
LESS (304) 174
LESSEQUAL (305) 178
LPAR (306) 11 20 21 33 100 214 237 258
LSQB (307) 215 238
MINEQUAL (308) 55
MINUS (309) 198 208
NAME (310) 19 28 30 31 32 102 103 104 109 110 111 112 218 239 258 259
    286
NEWLINE (311) 4 7 11 12 38 153
NOT (312) 170 182 184
NOTEQUAL (313) 180
NUMBER (314) 219
OR (315) 167
PASS (316) 73
PERCENT (317) 203
PERCENTEQUAL (318) 58
PLUS (319) 197 207
PLUSEQUAL (320) 54
PRINT (321) 66 67
RAISE (322) 84 85
RBRACE (323) 216
RETURN (324) 81 82
RIGHTSHIFT (325) 67 194
RIGHTSHIFTEQUAL (326) 63
RPAR (327) 11 20 21 33 100 214 237 258
RSQB (328) 215 238
SEMI (329) 321 322
SLASH (330) 202
SLASHEQUAL (331) 57
STAR (332) 30 99 201 317
STAREQUAL (333) 56
STRING (334) 229 230
TILDE (335) 209
TRY (336) 133 134
VBAREQUAL (337) 60
WHILE (338) 129 130
WITH (339) 141
YIELD (340) 287 288


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
start (87)
    on left: 1 2 3, on right: 0
single_input (88)
    on left: 4 5, on right: 3
file_input (89)
    on left: 6, on right: 1
pick_NEWLINE_stmt (90)
    on left: 7 8, on right: 9
star_NEWLINE_stmt (91)
    on left: 9 10, on right: 6 9
decorator (92)
    on left: 11 12, on right: 15 16
opt_arglist (93)
    on left: 13 14, on right: 11 237
decorators (94)
    on left: 15 16, on right: 15 17 18
decorated (95)
    on left: 17 18, on right: 124
funcdef (96)
    on left: 19, on right: 18 122
parameters (97)
    on left: 20 21, on right: 19
varargslist (98)
    on left: 22 23, on right: 20 160 235
opt_EQUAL_test (99)
    on left: 24 25, on right: 23 26 295
star_fpdef_COMMA (100)
    on left: 26 27, on right: 22 26
opt_DOUBLESTAR_NAME (101)
    on left: 28 29, on right: 30
pick_STAR_DOUBLESTAR (102)
    on left: 30 31, on right: 22
fpdef (103)
    on left: 32 33, on right: 23 26 34 289 295
fplist (104)
    on left: 34, on right: 33
stmt_stmt (105)
    on left: 35, on right: 5 8
stmt (106)
    on left: 36 37, on right: 35 154 155
simple_stmt (107)
    on left: 38, on right: 36 152
small_stmt (108)
    on left: 39 40 41 42 43 44 45 46 47, on right: 38 321
expr_stmt (109)
    on left: 48 49, on right: 39
pick_yield_expr_testlist (110)
    on left: 50 51, on right: 48 52
star_EQUAL (111)
    on left: 52 53, on right: 49 52
augassign (112)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65, on right: 48
print_stmt (113)
    on left: 66 67, on right: 40
opt_test (114)
    on left: 68 69, on right: 66
opt_test_2 (115)
    on left: 70 71, on right: 67
del_stmt (116)
    on left: 72, on right: 41
pass_stmt (117)
    on left: 73, on right: 42
flow_stmt (118)
    on left: 74 75 76 77 78, on right: 43
break_stmt (119)
    on left: 79, on right: 74
continue_stmt (120)
    on left: 80, on right: 75
return_stmt (121)
    on left: 81 82, on right: 76
yield_stmt (122)
    on left: 83, on right: 78
raise_stmt (123)
    on left: 84 85, on right: 77
opt_COMMA_test (124)
    on left: 86 87, on right: 88 113
opt_test_3 (125)
    on left: 88 89, on right: 84
import_stmt (126)
    on left: 90 91, on right: 44
import_name (127)
    on left: 92, on right: 90
import_from (128)
    on left: 93 94, on right: 91
star_DOT (129)
    on left: 95 96, on right: 93 95
plus_DOT (130)
    on left: 97 98, on right: 94 97
pick_STAR_import (131)
    on left: 99 100 101, on right: 93 94
import_as_name (132)
    on left: 102 103, on right: 106 307
dotted_as_name (133)
    on left: 104 105, on right: 107 108
import_as_names (134)
    on left: 106, on right: 100 101
dotted_as_names (135)
    on left: 107 108, on right: 92 108
dotted_name (136)
    on left: 109 110, on right: 11 12 93 104 105 110
global_stmt (137)
    on left: 111 112, on right: 45 111
exec_stmt (138)
    on left: 113 114, on right: 46
assert_stmt (139)
    on left: 115 116, on right: 47
compound_stmt (140)
    on left: 117 118 119 120 121 122 123 124, on right: 37
if_stmt (141)
    on left: 125 126, on right: 117
star_ELIF (142)
    on left: 127 128, on right: 125 126 127
while_stmt (143)
    on left: 129 130, on right: 118
for_stmt (144)
    on left: 131 132, on right: 119
try_stmt (145)
    on left: 133 134, on right: 120
plus_except (146)
    on left: 135 136, on right: 133 135
opt_ELSE (147)
    on left: 137 138, on right: 133
opt_FINALLY (148)
    on left: 139 140, on right: 133
with_stmt (149)
    on left: 141, on right: 121
star_COMMA_with_item (150)
    on left: 142 143, on right: 141 142
with_item (151)
    on left: 144 145, on right: 141 142
except_clause (152)
    on left: 146 147, on right: 135 136
pick_AS_COMMA (153)
    on left: 148 149, on right: 150
opt_AS_COMMA (154)
    on left: 150 151, on right: 146
suite (155)
    on left: 152 153, on right: 19 125 126 127 129 130 131 132 133
    134 135 136 137 139 141 258 259
plus_stmt (156)
    on left: 154 155, on right: 153 154
testlist_safe (157)
    on left: 156 157, on right: 274 275
old_test (158)
    on left: 158 159, on right: 156 157 160 161 276 277 282 283 313
    314 315
old_lambdef (159)
    on left: 160 161, on right: 159
test (160)
    on left: 162 163, on right: 24 67 68 84 86 88 113 115 116 125 126
    127 129 130 144 145 146 150 164 231 232 233 234 235 236 242 244
    248 251 252 253 268 269 284 285 298 301 310 311 312 316 317
opt_IF_ELSE (161)
    on left: 164 165, on right: 162
or_test (162)
    on left: 166 167, on right: 158 162 164 167 280 281
and_test (163)
    on left: 168 169, on right: 166 167 169
not_test (164)
    on left: 170 171, on right: 168 169 170
comparison (165)
    on left: 172 173, on right: 171 173
comp_op (166)
    on left: 174 175 176 177 178 179 180 181 182 183 184, on right:
    173
expr (167)
    on left: 185 186, on right: 113 114 144 172 173 186 250 292
xor_expr (168)
    on left: 187 188, on right: 185 186 188
and_expr (169)
    on left: 189 190, on right: 187 188 190
shift_expr (170)
    on left: 191 192, on right: 189 190 192
pick_LEFTSHIFT_RIGHTSHIFT (171)
    on left: 193 194, on right: 192
arith_expr (172)
    on left: 195 196, on right: 191 192 196
pick_PLUS_MINUS (173)
    on left: 197 198, on right: 196
term (174)
    on left: 199 200, on right: 195 196 200
pick_multop (175)
    on left: 201 202 203 204, on right: 200
factor (176)
    on left: 205 206, on right: 199 200 205 210
pick_unop (177)
    on left: 207 208 209, on right: 205
power (178)
    on left: 210 211, on right: 206
star_trailer (179)
    on left: 212 213, on right: 210 211 212
atom (180)
    on left: 214 215 216 217 218 219 220, on right: 210 211
pick_yield_expr_testlist_comp (181)
    on left: 221 222, on right: 223
opt_yield_test (182)
    on left: 223 224, on right: 214
opt_listmaker (183)
    on left: 225 226, on right: 215
opt_dictorsetmaker (184)
    on left: 227 228, on right: 216
plus_STRING (185)
    on left: 229 230, on right: 220 229
listmaker (186)
    on left: 231 232, on right: 225
testlist_comp (187)
    on left: 233 234, on right: 222
lambdef (188)
    on left: 235 236, on right: 163
trailer (189)
    on left: 237 238 239, on right: 212
subscriptlist (190)
    on left: 240, on right: 238
subscript (191)
    on left: 241 242 243, on right: 240 304
opt_test_only (192)
    on left: 244 245, on right: 243
opt_sliceop (193)
    on left: 246 247, on right: 243
sliceop (194)
    on left: 248 249, on right: 246
exprlist (195)
    on left: 250, on right: 72 131 132 274 275 280 281
testlist (196)
    on left: 251, on right: 48 49 51 81 131 132 260 287
dictorsetmaker (197)
    on left: 252 253, on right: 227
pick_comp_for (198)
    on left: 254 255, on right: 252
pick_for_test (199)
    on left: 256 257, on right: 253
classdef (200)
    on left: 258 259, on right: 17 123
opt_testlist (201)
    on left: 260 261, on right: 258
arglist (202)
    on left: 262 263 264 265 266 267, on right: 13 262
argument (203)
    on left: 268 269, on right: 262 263 264 318 320
opt_comp_for (204)
    on left: 270 271, on right: 268
list_iter (205)
    on left: 272 273, on right: 274 276
list_for (206)
    on left: 274 275, on right: 231 272
list_if (207)
    on left: 276 277, on right: 273
comp_iter (208)
    on left: 278 279, on right: 280 282
comp_for (209)
    on left: 280 281, on right: 233 254 256 270 278
comp_if (210)
    on left: 282 283, on right: 279
testlist1 (211)
    on left: 284 285, on right: 217 285
encoding_decl (212)
    on left: 286, on right: 2
yield_expr (213)
    on left: 287 288, on right: 50 83 221
star_fpdef_notest (214)
    on left: 289 290 291, on right: 34 289
star_COMMA_expr (215)
    on left: 292 293 294, on right: 250 292
star_COMMA_fpdef (216)
    on left: 295 296 297, on right: 23 295
star_COMMA_test (217)
    on left: 298 299 300, on right: 68 232 234 251 257 298
star_test_COLON_test (218)
    on left: 301 302 303, on right: 255 301
star_COMMA_subscript (219)
    on left: 304 305 306, on right: 240 304
star_COMMA_import_as_name (220)
    on left: 307 308 309, on right: 106 307
plus_COMMA_test (221)
    on left: 310 311 312, on right: 70 310
plus_COMMA_old_test (222)
    on left: 313 314 315, on right: 156 313
dictarg (223)
    on left: 316, on right: 267 319
listarg (224)
    on left: 317, on right: 265 266
arglist_postlist (225)
    on left: 318 319 320, on right: 265 318
small_stmt_STAR_OR_SEMI (226)
    on left: 321 322 323, on right: 38 321


State 0

    0 $accept: . start $end

    ASSERT     shift, and go to state 1
    AT         shift, and go to state 2
    BACKQUOTE  shift, and go to state 3
    BREAK      shift, and go to state 4
    CLASS      shift, and go to state 5
    CONTINUE   shift, and go to state 6
    DEF        shift, and go to state 7
    DEL        shift, and go to state 8
    EXEC       shift, and go to state 9
    FOR        shift, and go to state 10
    FROM       shift, and go to state 11
    GLOBAL     shift, and go to state 12
    IF         shift, and go to state 13
    IMPORT     shift, and go to state 14
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 20
    NEWLINE    shift, and go to state 21
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PASS       shift, and go to state 24
    PLUS       shift, and go to state 25
    PRINT      shift, and go to state 26
    RAISE      shift, and go to state 27
    RETURN     shift, and go to state 28
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30
    TRY        shift, and go to state 31
    WHILE      shift, and go to state 32
    WITH       shift, and go to state 33
    YIELD      shift, and go to state 34

    $default  reduce using rule 10 (star_NEWLINE_stmt)

    start              go to state 35
    single_input       go to state 36
    file_input         go to state 37
    pick_NEWLINE_stmt  go to state 38
    star_NEWLINE_stmt  go to state 39
    decorator          go to state 40
    decorators         go to state 41
    decorated          go to state 42
    funcdef            go to state 43
    stmt_stmt          go to state 44
    stmt               go to state 45
    simple_stmt        go to state 46
    small_stmt         go to state 47
    expr_stmt          go to state 48
    print_stmt         go to state 49
    del_stmt           go to state 50
    pass_stmt          go to state 51
    flow_stmt          go to state 52
    break_stmt         go to state 53
    continue_stmt      go to state 54
    return_stmt        go to state 55
    yield_stmt         go to state 56
    raise_stmt         go to state 57
    import_stmt        go to state 58
    import_name        go to state 59
    import_from        go to state 60
    global_stmt        go to state 61
    exec_stmt          go to state 62
    assert_stmt        go to state 63
    compound_stmt      go to state 64
    if_stmt            go to state 65
    while_stmt         go to state 66
    for_stmt           go to state 67
    try_stmt           go to state 68
    with_stmt          go to state 69
    test               go to state 70
    or_test            go to state 71
    and_test           go to state 72
    not_test           go to state 73
    comparison         go to state 74
    expr               go to state 75
    xor_expr           go to state 76
    and_expr           go to state 77
    shift_expr         go to state 78
    arith_expr         go to state 79
    term               go to state 80
    factor             go to state 81
    pick_unop          go to state 82
    power              go to state 83
    atom               go to state 84
    plus_STRING        go to state 85
    lambdef            go to state 86
    testlist           go to state 87
    classdef           go to state 88
    encoding_decl      go to state 89
    yield_expr         go to state 90


State 1

  115 assert_stmt: ASSERT . test COMMA test
  116            | ASSERT . test

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 92
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86


State 2

   11 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 93

    dotted_name  go to state 94


State 3

  217 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 95
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86
    testlist1    go to state 96


State 4

   79 break_stmt: BREAK .

    $default  reduce using rule 79 (break_stmt)


State 5

  258 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  259         | CLASS . NAME COLON suite

    NAME  shift, and go to state 97


State 6

   80 continue_stmt: CONTINUE .

    $default  reduce using rule 80 (continue_stmt)


State 7

   19 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 98


State 8

   72 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 99
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 100


State 9

  113 exec_stmt: EXEC . expr IN test opt_COMMA_test
  114          | EXEC . expr

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 101
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85


State 10

  131 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  132         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 99
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 102


State 11

   93 import_from: FROM . star_DOT dotted_name IMPORT pick_STAR_import
   94            | FROM . plus_DOT IMPORT pick_STAR_import

    DOT  shift, and go to state 103

    $default  reduce using rule 96 (star_DOT)

    star_DOT  go to state 104
    plus_DOT  go to state 105


State 12

  112 global_stmt: GLOBAL . NAME

    NAME  shift, and go to state 106


State 13

  125 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  126        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 107
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86


State 14

   92 import_name: IMPORT . dotted_as_names

    NAME  shift, and go to state 93

    dotted_as_name   go to state 108
    dotted_as_names  go to state 109
    dotted_name      go to state 110

